Bug 466481 - Cannot play MP4 files whose names contain "#"
Summary: Cannot play MP4 files whose names contain "#"
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.10.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
: 469559 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-02-26 17:33 UTC by daanturo
Modified: 2023-05-10 16:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description daanturo 2023-02-26 17:33:30 UTC
SUMMARY

STEPS TO REPRODUCE
1. Rename an .mp4 file to "#.mp4"
2. Open it Haruna

OBSERVED RESULT
The video file is played normally.

EXPECTED RESULT
Haruna opens but doesn't play the file.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
Operating System: Arch Linux 
KDE Plasma Version: 5.27.1
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 6.1.12-zen1-1-zen (64-bit)
Graphics Platform: Wayland


ADDITIONAL INFORMATION
Comment 1 Ben Bonacci 2023-02-27 10:55:45 UTC
I can confirm this issue also happens in version 0.10.3 on Neon testing. If the MP4 file is selected and opened directly (via Dolphin in my case), Haruna launches but can't play the file as the reporter mentioned. However if Haruna is launched first and the file is selected from within Haruna, then the file plays properly.
Comment 2 george fb 2023-02-28 11:51:01 UTC
Git commit 05f11a60a6458a716760ff7a012892414dd811a1 by George Florea Bănuș.
Committed on 28/02/2023 at 11:50.
Pushed by georgefb into branch 'master'.

playlistmodel: PlayListModel::openFile: pass percent encoded path to QUrl
PlayListModel::getSiblingItems: change parameter to a QUrl

M  +8    -9    src/models/playlistmodel.cpp
M  +1    -1    src/models/playlistmodel.h

https://invent.kde.org/multimedia/haruna/commit/05f11a60a6458a716760ff7a012892414dd811a1
Comment 3 george fb 2023-03-03 11:12:08 UTC
Git commit 91dc32928a1a8ee48d02a457043e7dd92ee36031 by George Florea Bănuș.
Committed on 03/03/2023 at 11:10.
Pushed by georgefb into branch 'master'.

add File class for consistent local path handling

M  +1    -0    src/CMakeLists.txt
M  +14   -5    src/application.cpp
A  +36   -0    src/file.cpp     [License: GPL(v3.0+)]
A  +56   -0    src/file.h     [License: GPL(v3.0+)]

https://invent.kde.org/multimedia/haruna/commit/91dc32928a1a8ee48d02a457043e7dd92ee36031
Comment 4 george fb 2023-05-10 16:09:56 UTC
*** Bug 469559 has been marked as a duplicate of this bug. ***