src/models/playlistmodel.cpp
@@ -97,14 +97,13 @@ QHash<int, QByteArray> PlayListModel::roleNames() const
     return roles;
 }
 
-void PlayListModel::getSiblingItems(QString path)
+void PlayListModel::getSiblingItems(QUrl url)
 {
     clear();
-    QUrl openedUrl(path);
-    if (openedUrl.scheme().isEmpty()) {
-        openedUrl.setScheme("file");
+    if (url.scheme().isEmpty()) {
+        url.setScheme("file");
     }
-    QFileInfo openedFileInfo(openedUrl.toLocalFile());
+    QFileInfo openedFileInfo(url.toLocalFile());
     if (openedFileInfo.exists() && openedFileInfo.isFile()) {
         QStringList siblingFiles;
         QDirIterator it(openedFileInfo.absolutePath(), QDir::Files, QDirIterator::NoIteratorFlags);
@@ -115,7 +114,7 @@ void PlayListModel::getSiblingItems(QString path)
             // for files containing the # character and probably other characters too
             // if the mime type is wrong the file will be ignored
             QUrl siblingUrl(siblingFile.toUtf8().toPercentEncoding());
-            siblingUrl.setScheme(openedUrl.scheme());
+            siblingUrl.setScheme(url.scheme());
             QString mimeType = Application::mimeType(siblingUrl);
             if (siblingFileInfo.exists() && (mimeType.startsWith("video/") || mimeType.startsWith("audio/")) && mimeType != QStringLiteral("audio/x-mpegurl")) {
                 siblingFiles.append(siblingFileInfo.absoluteFilePath());
@@ -130,7 +129,7 @@ void PlayListModel::getSiblingItems(QString path)
         for (int i = 0; i < siblingFiles.count(); ++i) {
             auto item = new PlayListItem(siblingFiles.at(i), this);
             m_playlist.append(item);
-            if (openedUrl.toString(QUrl::PreferLocalFile) == siblingFiles.at(i)) {
+            if (url.toString(QUrl::PreferLocalFile) == siblingFiles.at(i)) {
                 setPlayingItem(i);
             }
             Q_EMIT itemAdded(i, item->filePath());
@@ -273,7 +272,7 @@ void PlayListModel::openM3uFile(const QString &path)
 void PlayListModel::openFile(const QString &path)
 {
     clear();
-    QUrl url(path);
+    QUrl url(path.toUtf8().toPercentEncoding());
     if (url.scheme() == "file" || url.scheme() == QString()) {
         auto mimeType = Application::mimeType(url);
         if (mimeType == QStringLiteral("audio/x-mpegurl")) {
@@ -286,7 +285,7 @@ void PlayListModel::openFile(const QString &path)
         }
         if (mimeType.startsWith("video/") || mimeType.startsWith("audio/")) {
             if (PlaylistSettings::loadSiblings()) {
-                getSiblingItems(path);
+                getSiblingItems(url);
             } else {
                 appendItem(path);
                 setPlayingItem(0);
